# cli-agent-mcp

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  shared_sync.sh
dev-docs/: refactor-gui-to-web.md
dev-docs/samples/claude/: list_files_20251216_141959.json  simple_greeting_20251216_141839.json  simple_greeting_20251216_141901.json
dev-docs/samples/codex/: code_analysis_20251216_134157.json  simple_greeting_20251216_134103.json
dev-docs/samples/gemini/: code_analysis_20251216_134157.json  simple_greeting_20251216_134103.json
dev-docs/scripts/: collect_claude_samples.py  collect_samples.py
shared/: response_formatter.py
shared/gui/: __init__.py  renderer.py  server.py  template.py  window.py
shared/invokers/: __init__.py  base.py  codex.py  gemini.py  types.py
shared/parsers/: __init__.py  claude.py  codex.py  gemini.py
src/cli_agent_mcp/: __init__.py  __main__.py  app.py  config.py  gui_manager.py  orchestrator.py  server.py  signal_manager.py  tool_schema.py
src/cli_agent_mcp/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/cli_agent_mcp/handlers/: __init__.py  base.py  cli.py  image_tools.py  parallel.py
src/cli_agent_mcp/runtime/: __init__.py  process_runner.py
tests/: conftest.py  test_cancel_integration.py  test_collector.py  test_config.py  test_invokers.py  test_orchestrator.py  test_parsers.py  test_process_runner.py  test_server.py  test_signal_manager.py
tests/fixtures/: fake_cli.py
tests/test_gui/: __init__.py  demo_multi_source.py  demo_single_source.py  test_renderer.py  test_server.py
(+39 files in other folders)
